--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,26 @@
 <p>
   Start editing to see some magic happen :)
 </p>
+
+
+<div *ngFor="let item of testArray">
+  <!-- {{map.values}} -->
+  {{item[0]}}
+  {{item[1]}}
+  {{item[2]}}
+  {{item[3]}}
+  {{item[4]}}
+</div>
+
+baris
+<input type="text" [(ngModel)]="baris" /><br>
+kolom
+<input type="text" [(ngModel)]="kolom" /><br>
+<button (click)="updateItem(baris,kolom)">Go</button> 
+
+{{playerA}}
+{{playerB}}
+<br>
+{{winText}}
+<br>
+{{errorText}}
