--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,8 +19,8 @@ kolom
 <input type="text" [(ngModel)]="kolom" /><br>
 <button (click)="updateItem(baris,kolom)">Go</button> 
 
-{{playerA}}
-{{playerB}}
+<!-- {{playerA}}
+{{playerB}} -->
 <br>
 {{winText}}
 <br>
